syntax = "proto3";

package tradier;

option go_package = "./proto;tradier";

service Tradier {
	rpc Stream(StreamRequest) returns (StreamResponse) {}
}

message StreamRequest {
	string symbol = 1;
}

message StreamResponse {
}

